# dynaconf-test

./: .gitignore  README.md  pyproject.toml
dynaconf_test/: config.py  main.py  settings.toml
tests/: test_main.py
