[tool.poetry]
name = "dynaconf-test"
version = "0.1.0"
description = ""
authors = ["Joel <dark.templa.au@gmail.com>"]
readme = "README.md"
packages = [{include = "dynaconf_test"}]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"


[tool.poetry.scripts]
dynaconf-test = "dynaconf_test.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
